Solved issues with application icon
Setup window icon on start and setup installation icon. Resolve #4

--- a/misc/ppub.desktop.in
+++ b/misc/ppub.desktop.in
@@ -2,7 +2,7 @@
 Categories=Office;Viewer;
 MimeType=application/epub+zip;
 Exec=ppub %U
-Icon=ppub
+Icon=PREFIX/share/icons/hicolor/scalable/apps/ppub.svg
 StartupNotify=false
 Terminal=false
 Type=Application
